# mutter

./: Makefile.am  configure.ac
src/: Makefile-tests.am  Makefile.am
src/core/: display.c  util-private.h  util.c  window.c
src/tests/: test-client.c  test-runner.c
src/tests/maximizing/: maximizing-wayland.metatest  maximizing-x11.metatest
src/tests/wfits/: wfits-runner.c
src/wayland/: meta-wayland-keyboard.c  meta-wayland-seat.c  meta-wayland-surface.c  meta-wayland.c
test/: Makefile.am  bad-buffer-test.c  button-test.c  client-test.c  display-test.c  event-test.c  mutter-test-runner.c  mutter-test-runner.h  plugin-test.c  sanity-test.c  weston-test-client-helper.c  weston-test-client-helper.h
test/testplugin/: Makefile.am  wayland-test-implementation.c  wayland-test.c
